--- a/EncarAlquiler/app/views/locatarios/_form.html.erb
+++ b/EncarAlquiler/app/views/locatarios/_form.html.erb
@@ -32,6 +32,6 @@
     <%= f.text_field :email %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Guardar", class: "btn btn-success"%>
   </div>
 <% end %>
