--- a/EncarAlquiler/app/views/tipos/index.html.erb
+++ b/EncarAlquiler/app/views/tipos/index.html.erb
@@ -1,2 +1,25 @@
-<h1>Tipo#index</h1>
-<p>Find me in app/views/tipo/index.html.erb</p>
+<h1>Lista de Lipos</h1>
+<table>
+  <thead>
+    <tr>
+      <th>Nombre</th>
+          <th colspan="2"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @tipos.each do |tipo| %>
+      <tr>
+        <td><%= tipo.nombre %></td>
+        <td><%= link_to 'Show', tipo %></td>
+        <td><%= link_to 'Edit', edit_tipo_path(tipo) %></td>
+        <td><%= link_to 'Destroy', tipo, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<br>
+
+<%= link_to 'Nuevo Tipo', new_tipo_path %>
+
