--- a/EncarAlquiler/app/views/tipos/new.html.erb
+++ b/EncarAlquiler/app/views/tipos/new.html.erb
@@ -1,8 +1,5 @@
-<h1>Tipo#edit</h1>
+<h1>New tipo</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @tipo %> |
 <%= link_to 'Back', tipos_path %>
-
-
