--- a/EncarAlquiler/app/views/tipos/show.html.erb
+++ b/EncarAlquiler/app/views/tipos/show.html.erb
@@ -1,2 +1,12 @@
 <h1>Tipo#show</h1>
-<p>Find me in app/views/tipo/show.html.erb</p>
+<p id="notice"><%= notice %></p>
+
+<p>
+  <strong>Nombre:</strong>
+  <%= @tipo.nombre %>
+</p>
+
+
+<%= link_to 'Edit', edit_tipo_path(@tipo) %> |
+<%= link_to 'Back', tipos_path %>
+
