--- a/EncarAlquiler/app/views/habitaciones/edit.html.erb
+++ b/EncarAlquiler/app/views/habitaciones/edit.html.erb
@@ -1,2 +1,6 @@
-<h1>Habitaciones#edit</h1>
-<p>Find me in app/views/habitaciones/edit.html.erb</p>
+<h1>Editing habitacion</h1>
+
+<%= render 'form' %>
+
+<%= link_to 'Show', @habitacion %> |
+<%= link_to 'Back', habitacion_path %>
