--- a/EncarAlquiler/app/views/habitaciones/index.html.erb
+++ b/EncarAlquiler/app/views/habitaciones/index.html.erb
@@ -1,2 +1,29 @@
-<h1>Habitaciones#index</h1>
-<p>Find me in app/views/habitaciones/index.html.erb</p>
+<h1>Listing Habitaciones</h1>
+
+<table>
+  <thead>
+    <tr>
+      <th>Numero</th>
+      <th>Tipo</th>
+      <th>Descripcion</th>
+      <th colspan="4"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @habitaciones.each do |habitaciones| %>
+      <tr>
+        <td><%= habitacion.numero %></td>
+        <td><%= habitacion.tipo_id %></td>
+        <td><%= habitacion.descripcion %></td>
+        <td><%= link_to 'Show', habitacion %></td>
+        <td><%= link_to 'Edit', edit_habitacion_path(habitacion) %></td>
+        <td><%= link_to 'Destroy', habitacion, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<br>
+
+<%= link_to 'New Habitacion', new_habitacion_path %>
