--- a/EncarAlquiler/app/views/habitaciones/new.html.erb
+++ b/EncarAlquiler/app/views/habitaciones/new.html.erb
@@ -1,2 +1,5 @@
-<h1>Habitaciones#new</h1>
-<p>Find me in app/views/habitaciones/new.html.erb</p>
+<h1>New habitacion</h1>
+
+<%= render 'form' %>
+
+<%= link_to 'Back', habitaciones_path %>
