--- a/EncarAlquiler/app/views/habitaciones/_form.html.erb
+++ b/EncarAlquiler/app/views/habitaciones/_form.html.erb
@@ -14,15 +14,15 @@
   
   <div class="field">
     <%= f.label :numero %><br>
-    <%= f.text_field :Numero %>
+    <%= f.text_field :numero %>
   </div>
   <div class="field">
     <%= f.label :tipo_id %><br>
-    <%= f.text_field :Tipo %>
+    <%= f.text_field :tipo_id %>
   </div>
   <div class="field">
     <%= f.label :descripcion %><br>
-    <%= f.text_field :Descripcion %>
+    <%= f.text_field :descripcion %>
   </div>
   <div class="actions">
     <%= f.submit "Guardar", class: "btn btn-success"%>
