agregue precio a habitacion

--- a/EncarAlquiler/app/views/habitaciones/show.html.erb
+++ b/EncarAlquiler/app/views/habitaciones/show.html.erb
@@ -14,6 +14,10 @@
   <strong>Descripcion:</strong>
   <%= @habitacion.descripcion %>
 </p>
+<p>
+  <strong>Precio:</strong>
+  <%= @habitacion.precio %>
+</p>
 
 <%= link_to 'Edit', edit_habitacion_path(@habitacion) %> |
 <%= link_to 'Back', habitaciones_path %>
