--- a/EncarAlquiler/app/views/habitaciones/_form.html.erb
+++ b/EncarAlquiler/app/views/habitaciones/_form.html.erb
@@ -24,6 +24,10 @@
     <%= f.label :descripcion %><br>
     <%= f.text_field :descripcion %>
   </div>
+  <div class="field">
+    <%= f.label :precio %><br>
+    <%= f.text_field :precio %>
+  </div>
   <div class="actions">
     <%= f.submit "Guardar", class: "btn btn-success"%>
   </div>
