--- a/EncarAlquiler/app/views/habitaciones/index.html.erb
+++ b/EncarAlquiler/app/views/habitaciones/index.html.erb
@@ -6,7 +6,8 @@
       <th>Numero</th>
       <th>Tipo</th>
       <th>Descripcion</th>
-      <th colspan="4"></th>
+      <th>Precio</th>
+      <th colspan="5"></th>
     </tr>
   </thead>
 
@@ -16,6 +17,7 @@
         <td><%= habitacion.numero %></td>
         <td><%= habitacion.tipo_id %></td>
         <td><%= habitacion.descripcion %></td>
+        <td><%= habitacion.precio %></td>
         <td><%= link_to 'Show', habitacion %></td>
         <td><%= link_to 'Edit', edit_habitacion_path(habitacion) %></td>
         <td><%= link_to 'Destroy', habitacion, method: :delete, data: { confirm: 'Are you sure?' } %></td>
