--- a/EncarAlquiler/app/views/habitaciones/index.html.erb
+++ b/EncarAlquiler/app/views/habitaciones/index.html.erb
@@ -12,7 +12,7 @@
   </thead>
 
   <tbody>
-    <% @habitaciones.each do |habitaciones| %>
+    <% @habitaciones.each do |habitacion| %>
       <tr>
         <td><%= habitacion.numero %></td>
         <td><%= habitacion.tipo_id %></td>
