--- a/EncarAlquiler/app/views/reservas/_form.html.erb
+++ b/EncarAlquiler/app/views/reservas/_form.html.erb
@@ -21,6 +21,10 @@
     <%= f.text_field :fecha_inicio %>
   </div>
   <div class="field">
+    <%= f.label :fecha_de_inicio %><br>
+    <%= f.text_field :fecha_fin %>
+  </div>
+  <div class="field">
     <%= f.label :habitacion %><br>
     <%= f.text_field :habitacion %>
   </div>
