--- a/EncarAlquiler/app/views/reservas/show.html.erb
+++ b/EncarAlquiler/app/views/reservas/show.html.erb
@@ -13,6 +13,11 @@
 </p>
 
 <p>
+  <strong>Fecha Fin:</strong>
+  <%= @reserva.feha_fin %>
+</p>
+
+<p>
   <strong>Habitacion:</strong>
   <%= @reserva.habitacion %>
 </p>
