--- a/EncarAlquiler/app/views/reservas/show.html.erb
+++ b/EncarAlquiler/app/views/reservas/show.html.erb
@@ -4,22 +4,22 @@
 
 <p>
   <strong>Locatario:</strong>
-  <%= @reserva.locastario %>
+  <%= @reserva.locatario_id %>
 </p>
 
 <p>
   <strong>Fecha Inicio:</strong>
-  <%= @reserva.feha_inicio %>
+  <%= @reserva.fecha_inicio %>
 </p>
 
 <p>
   <strong>Fecha Fin:</strong>
-  <%= @reserva.feha_fin %>
+  <%= @reserva.fecha_fin %>
 </p>
 
 <p>
   <strong>Habitacion:</strong>
-  <%= @reserva.habitacion %>
+  <%= @reserva.habitacion_id %>
 </p>
 
 
