--- a/EncarAlquiler/app/views/habitaciones/index.html.erb
+++ b/EncarAlquiler/app/views/habitaciones/index.html.erb
@@ -1,31 +1,45 @@
-<h1>Listing Habitaciones</h1>
+<div class="espacio">
+<h1>Habitaciones</h1>
+<div class="col-md-10 col-md-offset-1">
+  <div class="table-responsive">
+    <table class="table table-bordered table-hover">
+      <thead>
+        <tr class="success">
+          <th class="text-center">Nombre</th>
+          <th class="text-center">Tipo</th>
+          <th class="text-center">Descripcion</th>
+          <th class="text-center">Precio</th>
+          <th class="text-center">Acciones</th>       
+          <th>
+              <button type="button" class="btn btn-default btn-xs">
+                <%= link_to '+', new_habitacion_path %>
+              </button>
+          </th>
+        </tr>
+      </thead>
 
-<table>
-  <thead>
-    <tr>
-      <th>Numero</th>
-      <th>Tipo</th>
-      <th>Descripcion</th>
-      <th>Precio</th>
-      <th colspan="5"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @habitaciones.each do |habitacion| %>
-      <tr>
-        <td><%= habitacion.numero %></td>
-        <td><%= habitacion.tipo_id %></td>
-        <td><%= habitacion.descripcion %></td>
-        <td><%= habitacion.precio %></td>
-        <td><%= link_to 'Show', habitacion %></td>
-        <td><%= link_to 'Edit', edit_habitacion_path(habitacion) %></td>
-        <td><%= link_to 'Destroy', habitacion, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Habitacion', new_habitacion_path %>
+      <tbody>
+        <% @habitaciones.each do |habitacion| %>
+          <tr>
+            <td><%= habitacion.numero %></td>
+            <td><%= habitacion.tipo_id %></td>
+            <td><%= habitacion.descripcion %></td>
+            <td><%= habitacion.precio %></td>
+            <td>
+              <button type="button" class="btn btn-default btn-xs">
+                <%= link_to 'Ver', habitacion %>
+              </button>
+              <button type="button" class="btn btn-default btn-xs"> 
+                <%= link_to 'Editar', edit_habitacion_path(habitacion) %> 
+              </button>
+              <button type="button" class="btn btn-default btn-xs">
+                <%= link_to 'Eliminar', habitacion, method: :delete, data: { confirm: 'Are you sure?' } %>
+              </button>
+            </td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+  </div>
+</div>
