--- a/EncarAlquiler/app/views/layouts/application.html.erb
+++ b/EncarAlquiler/app/views/layouts/application.html.erb
@@ -2,13 +2,10 @@
 <html>
 <head>
   <title>EncarAlquiler</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  
-  <%= csrf_meta_tags %>
 </head>
 <body>
 
 <%= yield %>
-<div>UNAE - Universidad Autonoma de Encarnacion</div>
+<!--<div>UNAE - Universidad Autonoma de Encarnacion</div>-->
 </body>
 </html>
