--- a/EncarAlquiler/app/views/locatarios/_form.html.erb
+++ b/EncarAlquiler/app/views/locatarios/_form.html.erb
@@ -1,3 +1,4 @@
+<h1 class="espacio">Editar Locatarios</h1>
 <%= form_for(@locatario) do |f| %>
   <% if @locatario.errors.any? %>
     <div id="error_explanation">
@@ -11,27 +12,43 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :nombre %><br>
-    <%= f.text_field :nombre %>
+<div class="col-md-10 col-md-offset-1">
+<div class="table-responsive espacio">
+    <table class="table table-bordered table-hover">
+      <thead>
+        <tr class="success">
+          <th class="text-center">
+            <%= f.label :nombre %><br>
+          </th>
+          <th class="text-center">
+            <%= f.label :apellido %><br>
+          </th>
+          <th class="text-center">
+            <%= f.label :ci %><br>
+          </th>
+          <th class="text-center">
+            <%= f.label :telefono %><br>
+          </th>
+          <th class="text-center">
+            <%= f.label :email %><br>
+          </th>
+        </tr>
+      </thead>
+
+      <tbody>
+          <tr>
+            <td><%= f.text_field :nombre %></td>
+            <td><%= f.text_field :apellido %></td>
+            <td><%= f.text_field :ci %></td>
+            <td><%= f.text_field :telefono %></td>
+            <td><%= f.text_field :email %></td>
+          </tr>
+      </tbody>
+    </table>
   </div>
-  <div class="field">
-    <%= f.label :apellido %><br>
-    <%= f.text_field :apellido %>
-  </div>
-  <div class="field">
-    <%= f.label :ci %><br>
-    <%= f.text_field :ci %>
-  </div>
-  <div class="field">
-    <%= f.label :telefono %><br>
-    <%= f.text_field :telefono %>
-  </div>
-  <div class="field">
-    <%= f.label :email %><br>
-    <%= f.text_field :email %>
-  </div>
+
+
   <div class="actions">
-    <%= f.submit "Guardar", class: "btn btn-success"%>
+    <%= f.submit "Guardar", class: "btn btn-success btn-xs" %>
   </div>
 <% end %>
