--- a/EncarAlquiler/app/views/tipos/_form.html.erb
+++ b/EncarAlquiler/app/views/tipos/_form.html.erb
@@ -1,3 +1,4 @@
+<h1 class="espacio">Editar Tipos</h1>
 <%= form_for(@tipo) do |f| %>
   <% if @tipo.errors.any? %>
     <div id="error_explanation">
@@ -11,12 +12,25 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :nombre %><br>
-    <%= f.text_field :nombre %>
-  </div>
+  <div class="col-md-6 col-md-offset-3">
+    <div class="table-responsive">
+      <table class="table table-bordered table-hover">
+        <thead>
+          <tr class="success">
+            <th class="text-center"><%= f.label :nombre %><br></th>
+          </tr>
+        </thead>
+        
+        <tbody>
+          <tr>
+            <td><%= f.text_field :nombre %></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
   
-  <div class="actions">
-    <%= f.submit "Guardar", class: "btn btn-success"%>
+    <div class="actions">
+      <%= f.submit "Guardar", class: "btn btn-success btn-xs" %>
+    </div>
   </div>
 <% end %>
