--- a/EncarAlquiler/app/views/tipos/edit.html.erb
+++ b/EncarAlquiler/app/views/tipos/edit.html.erb
@@ -1,8 +1,8 @@
-<h1>Tipo#edit</h1>
-
 <%= render 'form' %>
 
-<%= link_to 'Show', @tipo %> |
-<%= link_to 'Back', tipos_path %>
-
-
+<div class="col-md-6 col-md-offset-3">
+	<div class="actions">
+		<%= link_to '', @tipo, class: "glyphicon glyphicon-list-alt" %> 
+		<%= link_to '', tipos_path, class: "glyphicon glyphicon-chevron-left" %>
+	</div>
+</div>
