--- a/EncarAlquiler/app/views/tipos/show.html.erb
+++ b/EncarAlquiler/app/views/tipos/show.html.erb
@@ -1,12 +1,25 @@
-<h1>Tipo#show</h1>
-<p id="notice"><%= notice %></p>
+<h1 class="espacio">Tipos</h1>
 
-<p>
-  <strong>Nombre:</strong>
-  <%= @tipo.nombre %>
-</p>
+<!--<p id="notice"><%= notice %></p>-->
 
+<div class="col-md-6 col-md-offset-3">
+	<div class="table-responsive">
+	    <table class="table table-bordered table-hover">
+	      <thead>
+	        <tr class="success">
+	          <th class="text-center">Nombre</th>
+	        </tr>
+	      </thead>
 
-<%= link_to 'Edit', edit_tipo_path(@tipo) %> |
-<%= link_to 'Back', tipos_path %>
-
+	      <tbody>
+	          <tr>
+	            <td><%= @tipo.nombre %></td>
+	          </tr>
+	      </tbody>
+	    </table>
+	</div>
+	<div class="col-md-4">
+		<%= link_to '', edit_tipo_path(@tipo), class: "glyphicon glyphicon-list-alt" %>
+		<%= link_to '', tipos_path, class: "glyphicon glyphicon-chevron-left" %>
+	</div>
+</div>
