--- a/EncarAlquiler/app/views/habitaciones/show.html.erb
+++ b/EncarAlquiler/app/views/habitaciones/show.html.erb
@@ -1,4 +1,4 @@
-<h1 class="espacio">Lacatarios</h1>
+<h1 class="espacio">Habitaciones</h1>
 <p id="notice"><%= notice %></p>
 
 <div class="col-md-10 col-md-offset-1">
