--- a/EncarAlquiler/app/views/habitaciones/_form.html.erb
+++ b/EncarAlquiler/app/views/habitaciones/_form.html.erb
@@ -35,7 +35,7 @@
         <tbody>
             <tr>
               <td><%= f.text_field :numero %></td>
-              <td><%= f.text_field :tipo_id %></td>
+              <td> <%= f.collection_select(:tipo_id, Tipo.all, :id, :nombre, { prompt: true}, {:class=>'select2'}) %></td>
               <td><%= f.text_field :descripcion %></td>
               <td><%= f.text_field :precio %></td>
             </tr>
