--- a/EncarAlquiler/app/views/layouts/paginas.html.erb
+++ b/EncarAlquiler/app/views/layouts/paginas.html.erb
@@ -32,16 +32,21 @@
           <h3><%= link_to 'HAPPY ALQUILER', 'principal#index', :class= => 'navbar-brand'%></h3>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
+          <% if usuario_signed_in? %>
+            <ul class="nav navbar-nav">
               <li class="dropdown">
                 <a href="a" class="dropdown-toggle" data-hover="dropdown" data-toggle="dropdown">Administración <span class="caret"></span></a>
                <ul class="dropdown-menu">
+                
                   <li><%= link_to 'Reservas', reservas_path %></li>
                   <li><%= link_to 'Locatarios', locatarios_path %></li>
                   <li><%= link_to 'Habitaciones', habitaciones_path %></li>
                   <li><%= link_to 'Tipos', tipos_path %></li>
+                 
               </ul>
+
             </li>
+            <% end %>
 
          </ul>
           <ul class="nav navbar-nav navbar-right">
