--- a/EncarAlquiler/app/views/usuarios/confirmations/new.html.erb
+++ b/EncarAlquiler/app/views/usuarios/confirmations/new.html.erb
@@ -1,16 +1,27 @@
-<h2>Resend confirmation instructions</h2>
 
-<%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
+<div class="container">
+	<div class="row">
+		<div class="col-lg-12">
+			<div class="page-header">
+				<h1 id="type">Reenvio instructiones de confirmación</h1>
+			</div>
+		</div>
+		<div class="col-lg-12">
+			<%= bootstrap_form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
+  			<%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) %> 
-  </div>
+  			<div class="field">
+    			<%= f.email_field :email, autofocus: true, value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) %> 
+  			</div>
 
-  <div class="actions">
-    <%= f.submit "Resend confirmation instructions" %>
-  </div>
-<% end %>
+  			<div class="actions">
+    			<%= button_tag(type: 'submit', class: "btn btn-warning pull-right") do %>
+					<span class="glyphicon glyphicon-lock"></span> Reenviar instructiones de confirmación
+				<% end %>
+  			</div>
+			<% end %>
+		</div>
+	</div>
+</div>
 
 <%= render "usuarios/shared/links" %>
