--- a/EncarAlquiler/app/views/usuarios/passwords/edit.html.erb
+++ b/EncarAlquiler/app/views/usuarios/passwords/edit.html.erb
@@ -1,25 +1,31 @@
-<h2>Change your password</h2>
-
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
-  <%= f.hidden_field :reset_password_token %>
-
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
-    <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "off" %>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-12">
+      <div class="page-header">
+        <h1 id="type">Olvidaste tu contraseña?</h1>
+      </div>
+    </div>
+    <div class="col-lg-12">
+      <%= bootstrap_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+      <%= devise_error_messages! %>
+      <%= f.hidden_field :reset_password_token %>
+      <div class="field">
+        <% if @minimum_password_length %>
+          <em>(<%= @minimum_password_length %> characters minimum)</em>
+        <% end %>
+        <%= f.password_field :password, autofocus: true, autocomplete: "off" %>
+      </div>
+      <div class="field">
+        <%= f.password_field :password_confirmation, autocomplete: "off" %>
+      </div>
+      <div class="actions">
+        <%= button_tag(type: 'submit', class: "btn btn-primary pull-right") do %>
+          <span class="glyphicon glyphicon-user"></span> Cambiar clave
+        <% end %>
+      </div>
+      <% end %>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Cambiar contraseña" %>
-  </div>
-<% end %>
+</div>
 
 <%= render "usuarios/shared/links" %>
