--- a/EncarAlquiler/app/views/usuarios/passwords/new.html.erb
+++ b/EncarAlquiler/app/views/usuarios/passwords/new.html.erb
@@ -1,16 +1,31 @@
-<h2>Forgot your password?</h2>
+<div class="container">
+	<div class="row">
+		<div class="col-lg-offset-3 col-lg-6">
+			<div class="page-header">
+				<h1 id="type">Olvidaste tu contraseña?</h1>
+			</div>
+		</div>
+		<div class="col-lg-offset-3 col-lg-6">
+			<%= bootstrap_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+				<%= devise_error_messages! %>
+				<div class="field text-uppercase">
+					<%= f.email_field :email, autofocus: true %>
+				</div>
+				
+				<div class="actions">
+					<%= button_tag(type: 'submit', class: "btn btn-primary btn-block") do %>
+						<span class="glyphicon glyphicon-user"></span> Enviar instructiones
+					<% end %>
+				</div>
+			<% end %>
+		</div>
+	</div>
+</div>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "usuarios/shared/links" %>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-offset-3 col-lg-6">
+      <%= render "usuarios/shared/links" %>
+    </div>
+</div>
+</div>
