--- a/EncarAlquiler/app/views/usuarios/registrations/edit.html.erb
+++ b/EncarAlquiler/app/views/usuarios/registrations/edit.html.erb
@@ -1,39 +1,52 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-offset-4 col-lg-4">
+      <div class="page-header">
+        <h1 id="dialogs">Editar <%= resource_name.to_s.humanize %></h1>
+      </div>
+    </div>
+    <div class="col-lg-offset-4 col-lg-4">
+      <%= bootstrap_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+        <%= devise_error_messages! %>
+          <div class="field text-muted">
+            <%= f.email_field :email, autofocus: true %>
+          </div>
+          
+          <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+            <div>Esperando confirmación para: <%= resource.unconfirmed_email %></div>
+          <% end %>
+          <div class="field text-muted">
+            <i>(leave blank if you don't want to change it)</i>
+            <%= f.password_field :password, autocomplete: "off" %>
+          </div>
+          <div class="field text-muted">
+            <%= f.password_field :password_confirmation, autocomplete: "off" %>
+          </div> 
+          <div class="field text-muted">
+            <i>(we need your current password to confirm your changes)</i>
+            <%= f.password_field :current_password, autocomplete: "off" %>
+          </div>
+          <div class="actions">
+            <%= button_tag(type: 'submit', class: "btn btn-warning btn-block") do %>
+              <span class="glyphicon glyphicon-lock"></span> Actualizar
+            <% end %>
+          </div>
+        <% end %>
+    </div>
+    <div class="col-lg-offset-4 col-lg-4">
+      <div class="page-header">
+        <h1 id="dialogs">Borrar mi cuenta</h1>
+      </div>
+    </div>
+    <div class="col-lg-offset-4 col-lg-4">
+      <%= button_to ' Eliminar mi cuenta', registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete , class: 'btn btn-danger btn-block'%>
+    </div>
   </div>
-
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "off" %>
+</div>
+<div class="container page-header">
+  <div class="row">
+    <div class="col-lg-offset-4 col-lg-4">
+    <p><%= link_to glyph(:home) + ' Atrás', :back, class: 'btn btn-default btn-block' %></p>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Actualizar" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+</div>
