--- a/EncarAlquiler/app/views/usuarios/registrations/new.html.erb
+++ b/EncarAlquiler/app/views/usuarios/registrations/new.html.erb
@@ -1,29 +1,32 @@
-<h2>Sign up</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-offset-4 col-lg-4">
+      <div class="page-header">
+        <h1 id="type">Registrar usuario</h1>
+      </div>
+    </div>
+    <div class="col-lg-offset-4 col-lg-4">
+      <%= bootstrap_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= devise_error_messages! %>
+      <div class="field text-muted">
+        <%= f.email_field :email, autofocus: true %>
+      </div>
+      <div class="field text-muted">
+        <% if @minimum_password_length %>
+        <em>(<%= @minimum_password_length %> caracteres minimos)</em>
+        <% end %>
+        <%= f.password_field :password, autocomplete: "off" %>
+      </div>
+      <div class="field text-muted">
+        <%= f.password_field :password_confirmation, autocomplete: "off" %>
+      </div>
+      <div class="actions">
+        <%= button_tag(type: 'submit', class: "btn btn-primary btn-block") do %>
+          <span class="glyphicon glyphicon-user"></span> Registrarse
+        <% end %>
+      </div>
+      <% end %>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Registrarse" %>
-  </div>
-<% end %>
-
+</div>
 <%= render "usuarios/shared/links" %>
