--- a/EncarAlquiler/app/views/usuarios/unlocks/new.html.erb
+++ b/EncarAlquiler/app/views/usuarios/unlocks/new.html.erb
@@ -1,16 +1,24 @@
-<h2>Resend unlock instructions</h2>
-
-<%= form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Resend unlock instructions" %>
-  </div>
-<% end %>
-
+<div class="container">
+	<div class="row">
+		<div class="col-lg-12">
+			<div class="page-header">
+				<h1 id="type">Enviar instrucciones de desbloqueo</h1>
+			</div>
+		</div>
+		<div class="col-lg-12">
+			<%= bootstrap_form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
+			<%= devise_error_messages! %>
+			<div class="field text-uppercase">
+				<%= f.email_field :email, autofocus: true %>
+			</div>
+			
+			<div class="actions">
+				<%= button_tag(type: 'submit', class: "btn btn-primary pull-right") do %>
+					<span class="glyphicon glyphicon-user"></span> Enviar instrucciones
+				<% end %>
+			</div>
+			<% end %>
+		</div>
+	</div>
+</div>
 <%= render "usuarios/shared/links" %>
