--- a/EncarAlquiler/app/views/reservas/new.html.erb
+++ b/EncarAlquiler/app/views/reservas/new.html.erb
@@ -1,6 +1,11 @@
-<h1>Reservas#new</h1>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-12">
+<h1>Nueva Reserva</h1>
+</div>
 <%= render 'form' %>
-
+<div class="container">
+    <div class="row">
+        <div class="col-lg-12">
 <%= link_to 'Back', reservas_path %>
-
-
+</div>
