--- a/EncarAlquiler/app/views/habitaciones/new.html.erb
+++ b/EncarAlquiler/app/views/habitaciones/new.html.erb
@@ -1,5 +1,10 @@
-<h1>New habitacion</h1>
+
+<div class="col-md-12">
+	<h1>Nueva Habitacion</h1>
+</div>
 
 <%= render 'form' %>
 
+<div class="col-md-12">
 <%= link_to 'Back', habitaciones_path %>
+</div>
