--- a/EncarAlquiler/app/views/reservas/_form.html.erb
+++ b/EncarAlquiler/app/views/reservas/_form.html.erb
@@ -1,52 +1,56 @@
-<h1 class="espacio">Editar Reservas</h1>
-<%= form_for(@reserva) do |f| %>
-  <% if @reserva.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@reserva.errors.count, "error") %> prohibited this reserva from being saved:</h2>
-
-      <ul>
-      <% @reserva.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-12">
+            <%= form_for(@reserva) do |f| %>
+            <% if @reserva.errors.any? %>
+            <div id="error_explanation">
+                <h2><%= pluralize(@reserva.errors.count, "error") %> prohibited this reserva from being saved:</h2>
+                <ul>
+                    <% @reserva.errors.full_messages.each do |message| %>
+                    <li><%= message %></li>
+                    <% end %>
+                </ul>
+            </div>
+            <% end %>
+        </div>
     </div>
-  <% end %>
-<!--se toco la fecha de inicio porque estaba solamente fecha fin-->
-<!--se agrego estructura de la tabla-->
+    <div class="row well">
+        <div class="col-lg-12">
+            <div class="form-group col-lg-5">
+                <%= f.label :locatario_id %><br>
+                <%= f.collection_select(:locatario_id, Locatario.all, :id, :nombre,  { prompt: true}, {:class=>'form-control select2'}) %>
+            </div>
+            <div class="form-group col-lg-5" >
+                <%= f.label :fecha_reserva %><br>
+                <%= f.text_field :fecha_reserva, class: 'form-control input-sm datepicker', placeholder: 'Fecha de reserva'  %>
+            </div>
 
-  <div class="col-md-10 col-md-offset-1">
-      <div class="table-responsive">
-        <table class="table table-bordered table-hover">
-          <thead>
-            <tr class="success">
-              <th class="text-center">
-                <%= f.label :locatario_id %>
-              </th>
-              <th class="text-center">
-                <%= f.label :fecha_inicio %><br>
-              </th>
-              <th class="text-center">
-                <%= f.label :fecha_fin %><br>
-              </th>
-              <th class="text-center">
-                <%= f.label :habitacion_id %><br>
-              </th>
-            </tr>
-          </thead>
-
-          <tbody>
-              <tr>
-                <td><%= f.text_field :locatario_id %></td>
-                <td><%= f.text_field :fecha_inicio %></td>
-                <td><%= f.text_field :fecha_fin %></td>
-                <td><%= f.text_field :habitacion_id %></td>
-              </tr>
-          </tbody>
-        </table>
-      </div>
-
-      <div class="actions">
-        <%= f.submit "Guardar", class: "btn btn-success btn-xs"%>
-      </div>
-  </div>
+            <div class="form-group col-lg-2">
+                <label class="col-lg-12 col-xs-12">&nbsp;</label>
+                <%= f.add_nested_fields_link :reservas_habitaciones, glyph(:plus_sign), class: 'btn btn-primary btn-sm' %>
+                <%= button_tag(type: 'submit', class: "btn btn-success btn-sm") do %>
+                  <span class="glyphicon glyphicon-floppy-disk"></span>
+                <% end %>
+            </div>
+        </div>
+    </div>
+    <%= f.nested_fields_for :reservas_habitaciones,  layout: :inline do |ff| %>
+    <div class="row well">
+        <div class="col-lg-12 input-daterange" data-provide="datepicker">
+          <div class="form-group col-lg-3">
+            <%= ff.collection_select(:habitacion_id, Habitacion.all, :id, :numero,  { prompt: true}, {:class=>'form-control  input-sm', id: 'numero' }) %>
+          </div>
+            <div class="form-group col-lg-3">
+                <%= ff.remove_nested_fields_link glyph(:trash) , class: 'btn btn-danger btn-sm ', role: 'button', data: { confirm: 'Confirmar para eliminar este registro'} , hide_label: true %>
+            </div>
+          <div class="form-group col-lg-3">
+            <%= ff.text_field :fecha_inicio, class: 'form-control input-sm ', placeholder: 'Fecha de inicio', id: 'fecha_inicio' %>
+          </div>
+          <div class="form-group col-lg-3">
+            <%= ff.text_field :fecha_fin, class: 'form-control input-sm ', placeholder: 'Fecha fin', id: 'fecha_fin' %>
+          </div>
+        </div>
+    </div>
+    <% end %>
+</div>
 <% end %>
