--- a/EncarAlquiler/app/views/reservas/edit.html.erb
+++ b/EncarAlquiler/app/views/reservas/edit.html.erb
@@ -1,9 +1,6 @@
+<h1>Editing Reserva</h1>
+
 <%= render 'form' %>
 
-<div class="col-md-4">
-	<div class="actions">
-		<%= link_to '', @reserva, class: "glyphicon glyphicon-list-alt" %>
-		<%= link_to '', reservas_path, class: "glyphicon glyphicon-chevron-left" %>
-	</div>
-</div>
-
+<%= link_to 'Show', @reserva %> |
+<%= link_to 'Back', reservas_path %>
