--- a/EncarAlquiler/app/views/principal/index.html.erb
+++ b/EncarAlquiler/app/views/principal/index.html.erb
@@ -12,8 +12,8 @@
 <body>
 <div style="padding-top: 40px">
 	<div class="page-header" >
-	  <h4 class="text-center">LO MEJOR DEL ROCK NACIONAL 
-	  	<small>sin duda FLOU</small>
+	  <h4 class="text-center">Bienvenidos a Encarnacion Alquiler 
+	  	<small>Sistema de reserva de Habitaciones</small>
 	  </h4>
 	</div>
 </div>
@@ -32,29 +32,29 @@
 				<!--Contenedor-->
 				<div class="carousel-inner" role="listbox">
 					<div class="item active">
-						<img src="img/walter.jpeg" class="img-responsive" class="active">
+						<img src="img/bruno.jpg" class="img-responsive" class="active">
 						<div class="carousel-caption">
-							<h3>FLOOOUUUUUUUU</h3>
-							<p>LO MEJOR DEL ROCK PARAGUAYO</p>
+							<h3></h3>
+							<p>ENCARNACION ALQUILER</p>
 						</div>
 					</div>
 
 					<div class="item">						
-						<img src="img/bruno.jpeg" class="img-responsive">						
+						<img src="img/walter.jpg" class="img-responsive">						
 						<div class="carousel-caption">
-							<h3>FLOOOUUUUUUUU</h3>
-							<p>LO MEJOR DEL ROCK PARAGUAYO</p>
+						<p>ENCARNACION ALQUILER</p>
 						</div>
 					</div>
 
-					<div class="item">
-						<img src="img/guille.jpeg" class="img-responsive">						
+					<div class="item">						
+						<img src="img/guille.jpg" class="img-responsive">						
 						<div class="carousel-caption">
-							<h3>FLOOOUUUUUUUU</h3>
-							<p>LO MEJOR DEL ROCK PARAGUAYO</p>
+							<h3>RESPONSABLES</h3>
+							<p>ENCARNACION ALQUILER</p>
 						</div>
 					</div>
-				</div>
+
+
 
 
 				<!--Controles-->
@@ -74,8 +74,7 @@
 	<div class="navbar navbar-default navbar-fixed-bottom">
 
 		<div class="container">
-			<p class="navbar-text pull-left">Contacto</p>
-			<!--<a class="navbar-btn btn-danger btn pull-right">Hola quetal</a>-->
+		<a class="navbar-btn btn-primary btn pull-left">Contacto</a>
 		</div>
 		
 	</div>
