--- a/EncarAlquiler/app/views/tipos/index.html.erb
+++ b/EncarAlquiler/app/views/tipos/index.html.erb
@@ -8,9 +8,9 @@
               <th class="text-center">Nombre</th>
               <th class="text-center">Acciones</th>       
               <th>
-                  <button type="button" class="btn btn-default btn-xs">
-                    <%= link_to '+', new_tipo_path %>
-                  </button>
+                
+                    <%= link_to '+', new_tipo_path, class: 'btn btn-default btn-xs' %>
+                
               </th>
             </tr>
           </thead>
