--- a/EncarAlquiler/app/views/layouts/index_2.html.erb
+++ b/EncarAlquiler/app/views/layouts/index_2.html.erb
@@ -13,7 +13,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a href="principal/index.html" class="navbar-brand">HAPPY ALQUILER</a>
+          <a href="principal/index.html" class="navbar-brand">Encarnacion Alquiler</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
