--- a/EncarAlquiler/app/views/layouts/paginas.html.erb
+++ b/EncarAlquiler/app/views/layouts/paginas.html.erb
@@ -29,7 +29,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <h3><%= link_to 'HAPPY ALQUILER', 'principal#index', :class= => 'navbar-brand'%></h3>
+          <h3><%= link_to 'Encarnacion Alquiler', 'principal#index', :class= => 'navbar-brand'%></h3>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <% if usuario_signed_in? %>
@@ -51,7 +51,7 @@
          </ul>
           <ul class="nav navbar-nav navbar-right">
             <% if usuario_signed_in? %>
-            <li><%= link_to 'Salir', destroy_usuario_session_path, method: :delete%></li>
+            <li><%= link_to 'Salir', destroy_usuario_session_path, class: 'btn btn-default btn-xs',  method: :delete%></li>
             <% end %>
           </ul>
         </div><!--/.nav-collapse -->
