--- a/EncarAlquiler/app/views/locatarios/new.html.erb
+++ b/EncarAlquiler/app/views/locatarios/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Back', locatarios_path %>
+<%= link_to 'Back', locatarios_path, class: 'btn btn-default btn-xs' %>
