--- a/EncarAlquiler/app/views/reservas/new.html.erb
+++ b/EncarAlquiler/app/views/reservas/new.html.erb
@@ -7,5 +7,5 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-12">
-<%= link_to 'Back', reservas_path %>
+<%= link_to 'Volver Atras', reservas_path, class: 'btn btn-default btn-xs' %>
 </div>
