--- a/EncarAlquiler/app/views/reservas/show.html.erb
+++ b/EncarAlquiler/app/views/reservas/show.html.erb
@@ -10,5 +10,5 @@
   <%= @reserva.fecha_reserva %>
 </p>
 
-<%= link_to 'Edit', edit_reserva_path(@reserva) %> |
-<%= link_to 'Back', reservas_path %>
+<%= link_to 'Editar Reserva', edit_reserva_path(@reserva), class: 'btn btn-default btn-xs' %> |
+<%= link_to 'Volver Atras', reservas_path, class: 'btn btn-default btn-xs' %>
