Seguimos con los botones y a mi parecer las imagenes titulares del menu principal.

--- a/EncarAlquiler/app/views/principal/index.html.erb
+++ b/EncarAlquiler/app/views/principal/index.html.erb
@@ -32,9 +32,8 @@
 				<!--Contenedor-->
 				<div class="carousel-inner" role="listbox">
 					<div class="item active">
-						<img src="img/bruno.jpg" class="img-responsive" class="active">
+						<img src="img/guille.jpg" class="img-responsive" class="active">
 						<div class="carousel-caption">
-							<h3></h3>
 							<p>ENCARNACION ALQUILER</p>
 						</div>
 					</div>
@@ -47,11 +46,10 @@
 					</div>
 
 					<div class="item">						
-						<img src="img/guille.jpg" class="img-responsive">						
+						<img src="img/bruno.jpg" class="img-responsive">						
 						<div class="carousel-caption">
-							<h3>RESPONSABLES</h3>
 							<p>ENCARNACION ALQUILER</p>
-						</div>
+					</div>
 					</div>
 
 
