--- a/EncarAlquiler/app/views/habitaciones/index.html.erb
+++ b/EncarAlquiler/app/views/habitaciones/index.html.erb
@@ -16,11 +16,8 @@
           <th class="text-center">Precio</th>
           <th class="text-center">Estado</th>
           <th class="text-center">Acciones</th>       
-          <th>
-              <button type="button" class="btn btn-default btn-xs">
-                <%= link_to '+', new_habitacion_path %>
-              </button>
-          </th>
+          <th><%= link_to '+', new_habitacion_path, class: 'btn btn-default btn-xs'  %></th> 
+
         </tr>
       </thead>
 
