--- a/EncarAlquiler/app/views/reservas/edit.html.erb
+++ b/EncarAlquiler/app/views/reservas/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Reserva</h1>
+<h1>Editar Reserva</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @reserva %> |
-<%= link_to 'Back', reservas_path %>
+<%= link_to 'Mostrar Reservas', @reserva, class: 'btn btn-default btn-xs'  %> |
+<%= link_to 'Volver atras', reservas_path, class: 'btn btn-default btn-xs'  %>
