--- a/EncarAlquiler/app/views/reservas_habitaciones/edit.html.erb
+++ b/EncarAlquiler/app/views/reservas_habitaciones/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @reserva_habitacion %> |
+<%= link_to 'Show', @reserva_habitacion, class: 'btn btn-danger btn-xs'  %>
 <%= link_to 'Back', reservas_habitaciones_path %>
